# FastNoiseLite-beef

./: .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat
example/: BeefProj.toml
example/src/: Program.bf
libs/: fastnoiselite.lib  fastnoiselited.lib
libs/windows/: fastnoiselite.lib  fastnoiselited.lib
libs/windows/x64/: fastnoiselite.lib  fastnoiselite_d.lib
src/: FastNoiseLite.bf
